LAST/FIRST/TAKE aggregation should support TEXT type and Scripts
Signed-off-by: Lantao Jin <ltjin@amazon.com>